--- a/NOLF/ClientShellDLL/ClientShellDLL.vcxproj
+++ b/NOLF/ClientShellDLL/ClientShellDLL.vcxproj
@@ -217,8 +217,9 @@
       <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <PostBuildEvent>
-      <Command>copy debug\cshell.dll $(NOLF_BUILD_DIR)
+      <Command>copy debug\cshell.dll ..\
 cd ..\
+
 
 call "D:\GameDev\no-one-lives-forever-master\NOLF\_after_build_debug.bat"</Command>
       <Message>Running Post Build Script</Message>
