Working perfectly for fonts that supports all the characters it uses.

--- a/NOLF/ClientShellDLL/ClientShellDLL.vcxproj.filters
+++ b/NOLF/ClientShellDLL/ClientShellDLL.vcxproj.filters
@@ -1315,5 +1315,8 @@
     <ClInclude Include="FontMgr.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="MakePCX.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
