--- a/NOLF/ClientShellDLL/ClientShellDLL.vcxproj
+++ b/NOLF/ClientShellDLL/ClientShellDLL.vcxproj
@@ -690,6 +690,7 @@ call "D:\GameDev\no-one-lives-forever-master\NOLF\_after_build_debug.bat"</Comma
     <ClInclude Include="LTTextWnd.h" />
     <ClInclude Include="LtWnd.h" />
     <ClInclude Include="LTWndMessages.h" />
+    <ClInclude Include="MakePCX.h" />
     <ClInclude Include="MarkSFX.h" />
     <ClInclude Include="MenuJoystickAxis.h" />
     <ClInclude Include="MessageBox.h" />
