Oops. Wrong folder.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    SourceFolder: 'LIBS\\SDL2-2.0.10\\lib\\x86\\'
+    SourceFolder: 'LIBS\\SDL2_ttf-2.0.15\\lib\\x86\\'
     Contents: '*.dll'
     TargetFolder: '$(Pipeline.Workspace)\\Artifacts'
 
