--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,12 @@ steps:
 
 - task: CopyFiles@2
   inputs:
+    SourceFolder: 'BIN'
+    Contents: '**'
+    TargetFolder: '$(Pipeline.Workspace)\\Artifacts'
+
+- task: CopyFiles@2
+  inputs:
     SourceFolder: 'LIBS\\SDL2-2.0.10\\lib\\x86\\'
     Contents: 'SDL2.dll'
     TargetFolder: '$(Pipeline.Workspace)\\Artifacts'
