Rename Mouse Smoothing to Mouse wheel smoothing. Turns out that's inputrate.
And since we don't use the engine's mouse input code we can just call it mouse wheel smoothing.

--- a/NOLF/ClientRes/ClientRes.rc
+++ b/NOLF/ClientRes/ClientRes.rc
@@ -393,7 +393,7 @@ BEGIN
     IDS_MOUSE_LOOKSPRING    "Auto-center"
     IDS_MOUSE_INVERTYAXIS   "Invert y axis"
     IDS_MOUSE_SENSITIVITY   "Mouse sensitivity"
-    IDS_MOUSE_INPUTRATE     "Mouse smoothing"
+    IDS_MOUSE_INPUTRATE     "Mouse wheel smoothing"
     IDS_MOUSE_LEFTBUTTON    "Left button"
     IDS_MOUSE_MIDDLEBUTTON  "Middle button"
     IDS_MOUSE_RIGHTBUTTON   "Right button"
@@ -888,7 +888,7 @@ BEGIN
     IDS_HELP_INVERTY        "Toggle inversion of the mouse."
     IDS_HELP_MOUSELOOK      "Toggle use of mouse to look."
     IDS_HELP_MOUSE_SENSE    "Set sensitivity of the mouse."
-    IDS_HELP_MOUSE_INPUT    "Sets how much the mouse movement is smoothed."
+    IDS_HELP_MOUSE_INPUT    "Adjusts how responsive the mouse wheel is."
     IDS_HELP_MOUSE_BUTTON   "Set the action assigned to this button."
     IDS_HELP_NORMALTURN     "Set the normal turning speed for keyboard controls."
     IDS_HELP_FASTTURN       "Set the fast turn speed for keyboard controls."
