--- a/NOLF/ClientShellDLL/ClientShellDLL.vcxproj
+++ b/NOLF/ClientShellDLL/ClientShellDLL.vcxproj
@@ -445,6 +445,7 @@ call "D:\GameDev\no-one-lives-forever-master\NOLF\_after_build_debug.bat"</Comma
     <ClCompile Include="InterfaceTimer.cpp" />
     <ClCompile Include="IpMgr.cpp" />
     <ClCompile Include="JoystickAxis.cpp" />
+    <ClCompile Include="JukeboxButeMgr.cpp" />
     <ClCompile Include="KeyFixes.cpp" />
     <ClCompile Include="LaserBeam.cpp" />
     <ClCompile Include="LaserTriggerFX.cpp" />
@@ -669,6 +670,7 @@ call "D:\GameDev\no-one-lives-forever-master\NOLF\_after_build_debug.bat"</Comma
     <ClInclude Include="InterfaceTimer.h" />
     <ClInclude Include="IpMgr.h" />
     <ClInclude Include="JoystickAxis.h" />
+    <ClInclude Include="JukeboxButeMgr.h" />
     <ClInclude Include="KeyFixes.h" />
     <ClInclude Include="LaserBeam.h" />
     <ClInclude Include="LayoutMgr.h" />
