--- a/NOLF/ClientShellDLL/ClientShellDLL.vcxproj.filters
+++ b/NOLF/ClientShellDLL/ClientShellDLL.vcxproj.filters
@@ -614,6 +614,7 @@
     <ClCompile Include="ConsoleMgr.cpp">
       <Filter>Source\Interface</Filter>
     </ClCompile>
+    <ClCompile Include="JukeboxButeMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Shared\AssertMgr.h">
@@ -1309,5 +1310,6 @@
     <ClInclude Include="ConsoleMgr.h">
       <Filter>Source\Interface</Filter>
     </ClInclude>
+    <ClInclude Include="JukeboxButeMgr.h" />
   </ItemGroup>
 </Project>
