--- a/NOLF/ClientRes/ClientRes.rc
+++ b/NOLF/ClientRes/ClientRes.rc
@@ -7806,6 +7806,7 @@ BEGIN
                             "Fix for missing screen effects and also fixes the blackscreen while being underwater bug."
     IDS_JUKEBOX_THEME       "Themes"
     IDS_JUKEBOX_NOW_PLAYING "Now Playing:  %1!s!"
+    IDS_TITLE_JUKEBOX       "JUKEBOX"
 END
 
 #endif    // English (United States) resources
