--- a/NOLF/ClientRes/ClientRes.vcxproj
+++ b/NOLF/ClientRes/ClientRes.vcxproj
@@ -68,11 +68,7 @@
       <ProgramDataBaseFileName>.\Debug\</ProgramDataBaseFileName>
     </ClCompile>
     <PostBuildEvent>
-      <Command>copy debug\cres.dll .\cres.dll
-cd ..\
-
-
-call "D:\GameDev\no-one-lives-forever-master\NOLF\_after_build_debug.bat"</Command>
+      <Command>copy debug\cres.dll .\cres.dll</Command>
     </PostBuildEvent>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
